# map2arcpy

./: .gitignore  ADVANCED_SCRAPING.md  INSTALL.md  LICENSE  README.md  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: ci.yml  tests.yml
docs/: ARCHETYPE_STUDY.md  ARCHITECTURE.md  AUDIT_2026-07.md  GAPS.md  GRAMMAR.md  PREMORTEM.md  SYSTEMS_DYNAMICS_MATH.md
examples/: README.md  describe_buffer.txt  describe_choropleth.txt  landuse.lyrx  wards.geojson  webmap.json
src/map2arcpy/: __init__.py  archetypes.py  chains.py  cli.py  dashboard.html  detect.py  discover.py  doctor.py  dynamic_source_discovery.py  dynamics.py  feedback_learning.py  hermes_ai.py  intent.py  palettes.py  plan.py  probe.py  recommendations.py  scrapy_fetcher.py  server.py  spec.py  style.py  systems.py  tutorial_scraper.py  web.py  web_scraper.py
src/map2arcpy/generator/: __init__.py  emit.py  emit_gpd.py  runtime.py
src/map2arcpy/parsers/: __init__.py  archive.py  cim.py  data.py  image.py  nl.py  steps.py
src/map2arcpy/recipes/: __init__.py  carbon_storage.txt  decadal_rainfall.txt  flood_buffer.txt  hazard_selection.txt  lulc_categories.txt  rainfall.txt  service_area.txt  terrain.txt  ward_choropleth.txt
tests/: conftest.py  test_advanced_scraping.py  test_archetypes.py  test_archive.py  test_audit_fixes.py  test_chains.py  test_cim.py  test_cli.py  test_data.py  test_discover.py  test_doctor.py  test_dynamics.py  test_formats.py  test_generator.py  test_gpd.py  test_image.py  test_intent.py  test_nl.py  test_plan.py  test_probe.py  test_recipes.py  test_recommendations.py  test_render.py  test_server.py  test_steps.py  test_style.py  test_systems.py  test_web.py  test_web_scraper.py
